Avoiding Tab double-rowing on mobile.

--- a/resource/css/toolbar.css
+++ b/resource/css/toolbar.css
@@ -7,7 +7,7 @@ div.ext-helper-status {
 
 div.hidden-toolbar {
 	float: right;
-	width: 200px;
+	width: 130px;
 	text-align: right;
 	padding-right: 5px;
 }
